# libqjs

./: .gitmodules  CMakeLists.txt  README.md  package.json
.github/workflows/: test.yml
patches/: 001-get-version.patch  002-type-predicates.patch  003-coercion.patch  004-new-symbol.patch  005-uncatchable-error.patch  006-portable-time.patch  007-windows-atomics.patch  008-windows-alloca.patch  009-windows-bigint-limb.patch  010-windows-closure-type.patch  011-typed-array-type.patch  012-new-error.patch  013-dataview.patch  014-new-array.patch
src/: js.c  qjs.c  qjs.cc
test/: CMakeLists.txt
